Bug 480147 - "Configure Fingerprints" dialog is missized
Summary: "Configure Fingerprints" dialog is missized
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_users (other bugs)
Version First Reported In: master
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords: qt6
: 480640 (view as bug list)
Depends on:
Blocks:
 
Reported: 2024-01-21 22:03 UTC by Nicolas Fella
Modified: 2024-02-01 22:19 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Screenshot (245.77 KB, image/png)
2024-01-21 22:03 UTC, Nicolas Fella
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Nicolas Fella 2024-01-21 22:03:38 UTC
Created attachment 165116 [details]
Screenshot

See Screenshot

The dialog is too tall, the controls in the footer are cut off. It's not possible to scroll via touchpad to see the controls. Only scrolling via touchscreen works

SOFTWARE/OS VERSIONS
KDE Plasma Version: master
KDE Frameworks Version: master
Qt Version: 6.7

ADDITIONAL INFORMATION

Works fine in 5.27
Comment 1 Bug Janitor Service 2024-01-22 00:34:58 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/3806
Comment 2 Nicolas Fella 2024-02-01 13:04:39 UTC
*** Bug 480640 has been marked as a duplicate of this bug. ***
Comment 3 Bug Janitor Service 2024-02-01 16:21:17 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/kirigami/-/merge_requests/1454
Comment 4 Nicolas Fella 2024-02-01 22:19:44 UTC
Git commit b18c1e6194238689faa258e02f0e765e795f6ea7 by Nicolas Fella, on behalf of Marco Martin.
Committed on 01/02/2024 at 22:19.
Pushed by nicolasfella into branch 'master'.

Fix Overlay sheet size hints

Make sure the actual root element of the Overlay sheet doesn't go out of
the app window by limiting the hints, then in the case of a manual
flickable inserted in the sheet, use the flickable content height as
implicit height to try to show it without a scrollbar
Related: bug 480673, bug 480508, bug 480514

M  +10   -6    src/controls/templates/OverlaySheet.qml

https://invent.kde.org/frameworks/kirigami/-/commit/b18c1e6194238689faa258e02f0e765e795f6ea7