[kcms/users] Rework fingerprint popup

- Split parts into separate QML files
- Organize parts in a StackView
- Port from OverlaySheet to Kirigami.Dialog
- Port from SwipeListItem to ItemDelegate

BUG: 480147